style.css
@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');

.pacifico-regular {
  font-family: "Pacifico", serif;
  font-weight: 400;
  font-style: normal;
}

*, *::before, *::after {
  box-sizing: border-box;
}

a {

  &:hover {
    text-decoration: none;
    color: blue;
  }

  color: darkblue;
}

#gifContainer > img {
  padding: 8px;
}

.flex {
  display: flex;
}

body {
  font-family: "Pacifico", sans-serif;
  background-color: #ffe6e6;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100dvh;
  margin: 0;
  position: relative;
  overflow: auto;
}

.container {
  text-align: center;
  z-index: 1;
  width: 100%;
  padding: 20px;
}

h1 {
  color: #ff69b4;
  font-size: 2.5em;
  margin-bottom: 20px;
}

.buttons {
  margin-bottom: 20px;
}

button {
  padding: 15px 42px;
  font-size: 1.2em;
  margin: 10px;
  cursor: pointer;
  border: none;
  border-radius: 12px;
  transition: transform 0.2s;
}

#yesButton {
  background-color: #ff69b4;
  color: white;
  outline: 8px dashed #ffb0d8;
}

#noButton {
  background-color: #ffb6c1;
  color: white;
}

.hidden {
  display: none;
}

#gifContainer img {
  max-width: 30%;
  height: 200px;
}

.heart {
  position: absolute;
  width: 32px;
  height: 32px;
  background-color: #ff69b4;
  clip-path: path('M12 21.35L10.59 20.03C4.76 15.48 0 11.05 0 6.5A5.5 5.5 0 0 1 5.5 1C8.03 1 10.05 2.78 12 5.11 13.95 2.78 15.97 1 18.5 1A5.5 5.5 0 0 1 24 6.5c0 4.55-4.76 8.98-10.59 14.53L12 21.35z');
  animation: float 5s infinite ease-in-out;
}

@keyframes float {
  0% {
    transform: translateY(0) rotate(0);
    opacity: 1;
  }
  50% {
    transform: translateY(-20px) rotate(10deg);
    opacity: 0.7;
  }
  100% {
    transform: translateY(0) rotate(0);
    opacity: 1;
  }
}

.heart:nth-child(1) {
  top: 10%;
  left: 20%;
  animation-delay: 0s;
}

.heart:nth-child(2) {
  bottom: 30%;
  left: 70%;
  animation-delay: 1s;
}

.heart:nth-child(3) {
  top: 50%;
  left: 10%;
  animation-delay: 2s;
}

.heart:nth-child(4) {
  top: 70%;
  left: 80%;
  animation-delay: 3s;
}

.heart:nth-child(5) {
  top: 20%;
  left: 60%;
  animation-delay: 4s;
}

.message {
  font-size: 1.5em;
  color: #ff69b4;
  margin-top: 20px;
}

.footer {
  display: flex;
  justify-content: center;
  background-color: #fdd7d7;
  width: 100%;
  position: absolute;
  bottom: 0px;
  left: 0px;
  padding: 0px 8px;
}

@media (max-width: 768px) {
  h1 {
    font-size: 2em;
  }

  button {
    padding: 10px 20px;
    font-size: 1em;
  }

  .message {
    font-size: 1.2em;
  }
}

@media (max-width: 480px) {
  h1 {
    font-size: 1.5em;
  }

  #gifContainer {
      width: 100%;
      display: flex;
      flex-direction: column;
      align-items: center;
  }
  
    #gifContainer img {
      max-width: 100%;
      height: auto;
    }

  button {
    padding: 8px 16px;
    font-size: 0.9em;
  }

  .message {
    font-size: 1em;
  }

  .heart {
    width: 15px;
    height: 15px;
  }
}

